--- a/WebPage/Shared/NavMenu.razor
+++ b/WebPage/Shared/NavMenu.razor
@@ -5,6 +5,9 @@
     </button>
 </div>
 
+@*
+    PDF: https://www.microsoft.com/en-us/research/uploads/prod/2006/01/Bishop-Pattern-Recognition-and-Machine-Learning-2006.pdf
+*@
 <div class="@NavMenuCssClass" @onclick="ToggleNavMenu">
     <ul class="nav flex-column">
         <li class="nav-item px-3">
@@ -13,13 +16,13 @@
             </NavLink>
         </li>
         <li class="nav-item px-3">
-            <NavLink class="nav-link" href="counter">
-                <span class="oi oi-plus" aria-hidden="true"></span> Counter
+            <NavLink class="nav-link" href="chapter1">
+                <span class="oi oi-align-left" aria-hidden="true"></span> Chapter 1
             </NavLink>
         </li>
         <li class="nav-item px-3">
-            <NavLink class="nav-link" href="fetchdata">
-                <span class="oi oi-list-rich" aria-hidden="true"></span> Fetch data
+            <NavLink class="nav-link" href="chapter2">
+                <span class="oi oi-align-left" aria-hidden="true"></span> Chapter 2
             </NavLink>
         </li>
     </ul>
