modify: enable to display training data

--- a/WebPage/Pages/Chapter1.razor
+++ b/WebPage/Pages/Chapter1.razor
@@ -10,6 +10,8 @@
     <a href="/WebPage/chapter1/fig_1_2/">figure 1.2</a>
 </p>
 
+@using ChartJs.Blazor
+
 @*
     <h2>1.2 Probability theory</h2>
     <h3>1.2.1 Probability densities</h3>
@@ -38,5 +40,5 @@
 *@
 
 @code {
-
+    
 }
