--- a/WebPage/Pages/Chapter1_fig_1_2.razor
+++ b/WebPage/Pages/Chapter1_fig_1_2.razor
@@ -16,13 +16,7 @@
     Noise seed: <input @bind="Fig_1_2_noise_seed" type="number" style="width:100px;" />
 </p>
 <p>
-    Number of training data: 
-    <select @bind="Fig_1_2_nb_train" style="width:100px;">
-        <option value="10">10</option>
-        <option value="20">20</option>
-        <option value="50">50</option>
-        <option value="100">100</option>
-    </select>
+    Number of training data: <input @bind="Fig_1_2_nb_train" type="number" style="width:100px;" />
 </p>
 
 <button class="btn btn-primary" @onclick="Run">Optimize</button>
